--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <title>CSS exercise</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            * {
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <nav>
