--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body>
         <nav>
             <ol>
-                <li><a href="./css-method/css method.html" target="_blank">CSS method</a></li>
-                <li><a href="./class-id-selectors/class id selectors.html" target="_blank">CSS class id selectors</a></li>
+                <li><a href="./css-method/css-method.html" target="_blank">CSS method</a></li>
+                <li><a href="./class-id-selectors/class-id-selectors.html" target="_blank">CSS class id selectors</a></li>
                 <li><a href="./css-method/css method.html">CSS method</a></li>
                 <li><a href="./css-method/css method.html">CSS method</a></li>
                 <li><a href="./css-method/css method.html">CSS method</a></li>
