--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <ol>
                 <li><a href="./css-method/css-method.html" target="_blank">CSS method</a></li>
                 <li><a href="./class-id-selectors/class-id-selectors.html" target="_blank">CSS class id selectors</a></li>
-                <li><a href="./css-method/css method.html">CSS method</a></li>
-                <li><a href="./css-method/css method.html">CSS method</a></li>
-                <li><a href="./css-method/css method.html">CSS method</a></li>
-                <li><a href="./css-method/css method.html">CSS method</a></li>
+                <li><a href="./grouping-selectors/grouping-selector.html">CSS grouping selector</a></li>
+                <li><a href="./chaining-selectors/chaining-selectors.html">CSS chaining selectors</a></li>
+                <li><a href="./descendant-combinator/descendant-combinator.html">CSS descendant combinator</a></li>
+                <li><a href="./cascade-fix/cascade-fix.html">CSS cascade fix</a></li>
             </ol>
         </nav>
     </body>
