live server extension

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     </head>
     <body>
         <nav>
-            <ol>
-                <li><a href="./css-method/css-method.html" target="_blank">CSS method</a></li>
-                <li><a href="./class-id-selectors/class-id-selectors.html" target="_blank">CSS class id selectors</a></li>
-                <li><a href="./grouping-selectors/grouping-selector.html" target="_blank">CSS grouping selector</a></li>
-                <li><a href="./chaining-selectors/chaining-selectors.html" target="_blank">CSS chaining selectors</a></li>
-                <li><a href="./descendant-combinator/descendant-combinator.html" target="_blank">CSS descendant combinator</a></li>
-                <li><a href="./cascade-fix/cascade-fix.html" target="_blank">CSS cascade fix</a></li>
-            </ol>
+            <a href="./css-method/css-method.html" target="_blank">CSS method</a>
+            <a href="./class-id-selectors/class-id-selectors.html" target="_blank">CSS class id selectors</a>
+            <a href="./grouping-selectors/grouping-selector.html" target="_blank">CSS grouping selector</a>
+            <a href="./chaining-selectors/chaining-selectors.html" target="_blank">CSS chaining selectors</a>
+            <a href="./descendant-combinator/descendant-combinator.html" target="_blank">CSS descendant combinator</a>
+            <a href="./cascade-fix/cascade-fix.html" target="_blank">CSS cascade fix</a>
+            <br>
+            <a href="margin-and-padding/map1/map1.html" target="_blank">CSS margin and padding 1</a>
+            <a href="margin-and-padding/map1/map2.html" target="_blank">CSS margin and padding 2</a>
         </nav>
     </body>
 </html>
