--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             <br>
             <a href="margin-and-padding/map1/map1.html" target="_blank">CSS margin and padding 1</a>
             <a href="margin-and-padding/map1/map2.html" target="_blank">CSS margin and padding 2</a>
+            <br>
+            <a href="./flex/flex-center/flex-center.html">flex center</a>
+            <a href="./flex/flex-header/flex-header.html">flex header</a>
+            <a href="./flex/flex-header2/flex-header2.html">flex header2</a>
+            <a href="./flex/flex-information/flex-information.html">flex information</a>
+            <a href="./flex/flex-layout/flex-layout.html">flex layout</a>
+            <a href="./flex/flex-layout2/flex-layout2.html">flex layout2</a>
+            <a href="./flex/flex-modal/flex-modal.html">flex modal</a>
         </nav>
     </body>
 </html>
