--- a/flex/flex-header2/flex-header2.html
+++ b/flex/flex-header2/flex-header2.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flex Header 2</title>
-  <link rel="stylesheet" href="./flex-hreader2.css">
+  <link rel="stylesheet" href="./flex-header2.css">
 </head>
 <body>
   <div class="header">
-    <div class="left-side">
+    <div class="left">
       <div class="logo">
         LOGO
       </div>
@@ -19,13 +19,12 @@
         <li><a href="google.com">link-three</a></li>
       </ul>
     </div>
-
-    <div class="right-side">
+    <div class="right">
       <button class="notifications">
         1 new notification
       </button>
       <div class="profile-image"></div>
-    </div>d
+    </div>
   </div>
 </body>
 </html>
